k8s-examples/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: joker
spec:
  replicas: 1  # <- How many Pods to create (scale up/down)
  selector:
    matchLabels:
      app: joker  # <- Which template below to use (only one in this case)
  template:
    metadata:
      labels:
        app: joker  # <- Matches the selector rule above

    # The part below follows the schema for Pod definitions
    spec:
        containers:
        - name: joker
          image: harbor.floskl.life/common/python-example:1.0.0

          resources:
            limits:
              memory: "128Mi"
              cpu: "30m"
