k8s-examples/example-init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
spec:
  containers:
  - name: joker
    image: harbor.floskl.life/common/python-example:1.0.0

    resources:
            limits:
              memory: "128Mi"
              cpu: "10m"
