k8s-examples/example-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
spec:
  containers:
  - name: example
    image: ghcr.io/uivraeus/cpp-example:1.0.0
    resources:
      limits:
        memory: "128Mi"
        cpu: "60m"
