k8s-examples/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: joker
  name: app-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: joker
